Fix a bunch of analysis issues.